tests/integration/errors/bang_non_bool.rsg
// TEST: compile_error
// EXPECT-ERROR: '!' requires 'bool' operand
module test_err

fn main() {
    var x: i32 = !42
}
